<resources>
    <string name="app_name">Orgs</string>
    <string name="botao_de_adicionar_produto">botao de adicionar produto</string>
    <string name="novo_produto">Novo Produto</string>
    <string name="carregar">Carregar</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="nome_desc">Nome desc</string>
    <string name="nome_asc">Nome asc</string>
    <string name="descri_o_desc">Descrição desc</string>
    <string name="descri_o_asc">Descrição asc</string>
    <string name="valor_desc">Valor desc</string>
    <string name="valor_asc">Valor asc</string>
    <string name="sem_ordem">Sem ordem</string>
    <string name="ordenar">Ordenar</string>
    <string name="usuario">Usuário</string>
    <string name="orgs">Orgs</string>
    <string name="senha">Senha</string>
    <string name="cadastrar_usuario">cadastrar usuário</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sair">sair</string>
    <string name="sair_do_app">Sair do App</string>
    <string name="perfil_do_usu_rio">Perfil do usuário</string>
    <string name="todos_os_produtos">Todos os produtos</string>
</resources>