<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lista_produtos_ordenar"
        android:icon="@drawable/ic_action_ordenar"
        android:title="@string/ordenar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_lista_produtos_nome_desc"
                android:title="@string/nome_desc" />

            <item
                android:id="@+id/menu_lista_produtos_nome_asc"
                android:title="@string/nome_asc" />
            <item
                android:id="@+id/menu_lista_produtos_descricao_desc"
                android:title="@string/descri_o_desc" />

            <item
                android:id="@+id/menu_lista_produtos_descricao_asc"
                android:title="@string/descri_o_asc" />
            <item
                android:id="@+id/menu_lista_produtos_valor_desc"
                android:title="@string/valor_desc" />

            <item
                android:id="@+id/menu_lista_produtos_valor_asc"
                android:title="@string/valor_asc" />

            <item
                android:id="@+id/menu_lista_produtos_sem_ordem"
                android:title="@string/sem_ordem" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_lista_produtos_perfil_usuario"
        android:icon="@drawable/ic_action_perfil"
        android:title="@string/perfil_do_usu_rio"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_lista_produtos_todos_produtos"
        android:icon="@drawable/ic_action_all"
        android:title="@string/todos_os_produtos"
        app:showAsAction="ifRoom" />
</menu>